# Vignetting

./: .clang-format  .gitignore  CMakeLists.txt  Vignetting.cpp  Vignetting.h
Example/: CMakeLists.txt  TestVignetting.cpp
